--- a/H4TestOgSikkerhedTest/H4TestOgSikkerhedTest.csproj
+++ b/H4TestOgSikkerhedTest/H4TestOgSikkerhedTest.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -23,6 +23,7 @@
   <ItemGroup>
     <PackageReference Include="bunit.core" Version="1.14.4" />
     <PackageReference Include="bunit.web" Version="1.14.4" />
+    <PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
     <PackageReference Include="Selenium.Support" Version="4.7.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.7.0" />
